--- a/docker-compose-galera.yml
+++ b/docker-compose-galera.yml
@@ -29,10 +29,10 @@ services:
     volumes:
       - "./gdatadir_01:/var/lib/mysql"
       - "./gbackups_01:/backups"
-      - "./gcustom_1.cnf:/etc/mysql/mariadb.conf.d/999_custom.cnf:ro"
-      - "./init-permissions.sql:/docker-entrypoint-initdb.d/init-permissions.sql:ro"
+      - "./conf/gcustom_1.cnf:/etc/mysql/mariadb.conf.d/999_custom.cnf:ro"
+      - "./conf/init-permissions.sql:/docker-entrypoint-initdb.d/init-permissions.sql:ro"
       - "./ssl:/etc/mysql/ssl:ro"
-      - "./ssl.cnf:/etc/mysql/conf.d/ssl.cnf:ro"
+      - "./conf/ssl.cnf:/etc/mysql/conf.d/ssl.cnf:ro"
     tmpfs:
       - /tmp:size=1G
     networks:
@@ -49,10 +49,10 @@ services:
     volumes:
       - "./gdatadir_02:/var/lib/mysql"
       - "./gbackups_02:/backups"
-      - "./gcustom_2.cnf:/etc/mysql/mariadb.conf.d/999_custom.cnf:ro"
-      - "./init-permissions.sql:/docker-entrypoint-initdb.d/init-permissions.sql:ro"
+      - "./conf/gcustom_2.cnf:/etc/mysql/mariadb.conf.d/999_custom.cnf:ro"
+      - "./conf/init-permissions.sql:/docker-entrypoint-initdb.d/init-permissions.sql:ro"
       - "./ssl:/etc/mysql/ssl:ro"
-      - "./ssl.cnf:/etc/mysql/conf.d/ssl.cnf:ro"
+      - "./conf/ssl.cnf:/etc/mysql/conf.d/ssl.cnf:ro"
     tmpfs:
       - /tmp:size=1G
     networks:
@@ -69,10 +69,10 @@ services:
     volumes:
       - "./gdatadir_03:/var/lib/mysql"
       - "./gbackups_03:/backups"
-      - "./gcustom_3.cnf:/etc/mysql/mariadb.conf.d/999_custom.cnf:ro"
-      - "./init-permissions.sql:/docker-entrypoint-initdb.d/init-permissions.sql:ro"
+      - "./conf/gcustom_3.cnf:/etc/mysql/mariadb.conf.d/999_custom.cnf:ro"
+      - "./conf/init-permissions.sql:/docker-entrypoint-initdb.d/init-permissions.sql:ro"
       - "./ssl:/etc/mysql/ssl:ro"
-      - "./ssl.cnf:/etc/mysql/conf.d/ssl.cnf:ro"
+      - "./conf/ssl.cnf:/etc/mysql/conf.d/ssl.cnf:ro"
     tmpfs:
       - /tmp:size=1G
     networks:
@@ -84,7 +84,7 @@ services:
     container_name: haproxy_galera
     restart: unless-stopped
     volumes:
-      - ./haproxy-galera.cfg:/usr/local/etc/haproxy/haproxy.cfg:ro
+      - ./conf/haproxy-galera.cfg:/usr/local/etc/haproxy/haproxy.cfg:ro
     ports:
       - "3306:3306"
       - "8404:8404"
