--- a/conf/supervisord.conf
+++ b/conf/supervisord.conf
@@ -21,10 +21,9 @@ stderr_logfile=/var/log/supervisor/sshd.err.log
 stdout_logfile=/var/log/supervisor/sshd.out.log
 
 [program:mariadb]
-# Utilise le script wrapper pour gérer l'initialisation vs démarrage
+# Use the wrapper script to handle initialization vs startup
 command=/usr/local/bin/start_mariadb.sh
 autorestart=false
-# Donne quelques secondes à la DB pour s'arrêter proprement
-stopwaitsecs=60
+# Give the DB a few seconds to shut down cleanly
 stderr_logfile=/var/log/supervisor/mariadb.err.log
 stdout_logfile=/var/log/supervisor/mariadb.out.log
