--- a/conf/custom_3.cnf
+++ b/conf/custom_3.cnf
@@ -19,8 +19,19 @@ proxy_protocol_networks=10.5.0.0/24,10.6.0.0/24
 binlog_expire_logs_seconds=172800
 
 # --- Performance Schema (PFS) ---
-# Enable Performance Schema monitoring
+# Enable the engine
 performance_schema = ON
+
+# History size per thread (Default is often 10)
+# Allows viewing the last N transactions for a specific connection
+performance_schema_events_transactions_history_size = 2000
+
+# Global history size (Default is often 10000)
+# Increasing this value is crucial for capturing transient events on a busy server
+performance_schema_events_transactions_history_long_size = 50000
+# Force activation of transaction consumers at startup
+performance-schema-consumer-events-transactions-history = ON
+performance-schema-consumer-events-transactions-history-long = ON
 
 # --- Slow Query Logging ---
 # Enable the slow query log
