--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -94,6 +94,22 @@ services:
       - "traefik.tcp.routers.db-router.entrypoints=mysql"
       - "traefik.tcp.services.db-service.loadbalancer.server.port=3306"
       
+  mariadb118:
+    image: mariadb:11.8
+    container_name: mariadb-11.8
+    restart: unless-stopped
+    environment:
+      MARIADB_ROOT_PASSWORD: ${DB_ROOT_PASSWORD}
+    volumes:
+      - mariadb_11_8_data:/var/lib/mysql
+    profiles:
+      - "mariadb118"
+    labels:
+      - "traefik.enable=true"
+      - "traefik.tcp.routers.db-router.rule=HostSNI(`*`)"
+      - "traefik.tcp.routers.db-router.entrypoints=mysql"
+      - "traefik.tcp.services.db-service.loadbalancer.server.port=3306"
+      
   mariadb1011:
     image: mariadb:10.11
     container_name: mariadb-10.11
@@ -166,6 +182,7 @@ volumes:
   mysql_9_3_data:
   mysql_8_4_data:
   mysql_8_0_data:
+  mariadb_11_8_data:
   mariadb_11_4_data:
   mariadb_10_11_data:
   mariadb_10_6_data:
